Fixed extra margin

--- a/css/slipSlide.scss
+++ b/css/slipSlide.scss
@@ -63,6 +63,9 @@
 			height:auto;
 		}
 	 }
+	 .slide:last-child,.slide:last-child img,img:last-child{
+		margin:0 0 0 1.5%;
+	 }
 	 .slide.focus{
 		background:blue;
 	 }
